--- a/.github/workflows/ain10-long.yml
+++ b/.github/workflows/ain10-long.yml
@@ -3,9 +3,10 @@ name: Generate long-term charts (AIN-10 1d/7d/1m/1y + stats)
 on:
   workflow_dispatch:
   schedule:
-    - cron: '30 21 * * 1-5'  # 米市場クローズ後（UTC 21:30 ≒ NY 16:30）目安。要調整。
+    - cron: '30 21 * * 1-5'  # 21:30 UTC ≒ NY 16:30
 
-permissions: { contents: write }
+permissions:
+  contents: write
 
 concurrency:
   group: long-charts-${{ github.ref }}
@@ -15,14 +16,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 25
+
+    env:
+      INDEX_KEY: ain10
+
     steps:
       - uses: actions/checkout@v4
-        with: { fetch-depth: 0, persist-credentials: true }
+        with:
+          fetch-depth: 0
+          persist-credentials: true
 
       - name: Resolve
         id: resolve
+        shell: bash
         run: |
-          echo "INDEX_KEY=ain10" | tee -a "$GITHUB_ENV"
           echo "market_tz=America/New_York" >> "$GITHUB_OUTPUT"
           echo "session_start=09:30"        >> "$GITHUB_OUTPUT"
           echo "session_end=16:00"          >> "$GITHUB_OUTPUT"
@@ -37,15 +44,23 @@ jobs:
           restore-keys: ${{ runner.os }}-pip-
 
       - name: Install deps
+        shell: bash
         run: |
           pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; else pip install pandas numpy matplotlib; fi
 
-      - run: rm -rf scripts/__pycache__ || true
+      - name: Clear pycache
+        shell: bash
+        run: rm -rf scripts/__pycache__ || true
+
+      - name: Update history (if available)
+        shell: bash
+        run: |
+          if [ -f scripts/update_history.py ]; then python scripts/update_history.py || true; fi
 
       - name: Generate long-term charts
+        shell: bash
         env:
-          INDEX_KEY: ${{ env.INDEX_KEY }}
           MARKET_TZ: ${{ steps.resolve.outputs.market_tz }}
           SESSION_START: ${{ steps.resolve.outputs.session_start }}
           SESSION_END: ${{ steps.resolve.outputs.session_end }}
@@ -54,6 +69,7 @@ jobs:
           ls -lah docs/outputs || true
 
       - name: Normalize legacy filenames
+        shell: bash
         run: |
           OUTDIR="docs/outputs"; shopt -s nullglob
           for f in "$OUTDIR"/ain_10_*; do
@@ -61,20 +77,29 @@ jobs:
           done
 
       - name: Sanity check - prefix
-        env: { INDEX_KEY: ${{ env.INDEX_KEY }} }
+        shell: bash
+        env:
+          INDEX_KEY: ${{ env.INDEX_KEY }}
         run: |
           OUTDIR="docs/outputs"; shopt -s nullglob; err=0
           for f in "$OUTDIR"/*; do
-            b="$(basename "$f")"; case "$b" in README.md|_last_run.txt) continue;; esac
-            [[ "$b" == "${INDEX_KEY}_"* ]] || { echo "❌ prefix mismatch: $b"; err=1; }
+            b="$(basename "$f")"
+            case "$b" in README.md|_last_run.txt) continue;; esac
+            [[ "$b" == "${INDEX_KEY}_"* ]] || { echo "X prefix mismatch: $b"; err=1; }
           done
           [ $err -eq 0 ] || exit 1
-          echo "✅ Prefix check passed."
+          echo "✓ Prefix check passed."
 
       - name: Commit charts if changed
+        shell: bash
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add docs/outputs/${{ env.INDEX_KEY }}_{1d,7d,1m,1y}.png 2>/dev/null || true
+          git add docs/outputs/${INDEX_KEY}_{1d,7d,1m,1y}.png 2>/dev/null || true
           git add docs/outputs/*_stats.json 2>/dev/null || true
-          if git diff --cached --quiet; then echo "No changes"; else git commit -m "chore(charts): update long charts & stats (${{ env.INDEX_KEY }})"; git push; fi
+          if git diff --cached --quiet; then
+            echo "No changes"
+          else
+            git commit -m "chore(charts): update long charts & stats (${INDEX_KEY})"
+            git push
+          fi
